# tgarefill

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
configs/: analysis.yaml  data_sources.yaml  episode_rules.yaml  fred_series.yaml  manual_event_labels_template.csv  stfm_queries.yaml
scripts/: bootstrap.sh  build_attribution_baseline.py  build_auction_shock_lp.py  build_event_candidates.py  build_figures.py  build_local_projections.py  build_master_panel.py  build_site_data.py  build_staging.py  download_all.py  download_fiscaldata.py  download_fred.py  download_ofr_stfm.py  download_treasury_home.py  run_mvp.sh
site/: README.md  app.js  index.html  styles.css
site/data/: attribution.json  attribution_enriched.json  auction_shock_lp.json  era_summary.json  events.json  local_projections.json  lp_comparison.json  summary.json  timeline.json
src/tgarefill/: cli.py  logging_utils.py  settings.py
src/tgarefill/analytics/: attribution.py  auction_shocks.py  eras.py  events.py  local_projections.py  panel.py
src/tgarefill/data/: fiscaldata.py  fred.py  ofr.py  treasury_home.py
src/tgarefill/utils/: files.py  http.py
tests/: test_attribution.py  test_auction_shocks.py  test_config.py  test_data_pipeline.py  test_eras.py  test_events.py  test_local_projections.py  test_panel.py  test_public_artifacts.py  test_site_data.py  test_staging_policy.py
